k8s/04-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskmanager
  namespace: taskmanager
  labels:
    app: taskmanager
spec:
  replicas: 2 # (minimum requis : 2)
  selector:
    matchLabels:
      app: taskmanager
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1       # — combien de Pods supplémentaires pendant la mise à jour ?
      maxUnavailable: 0  # — combien de Pods peuvent être indisponibles pendant la mise à jour ?
  template:
    metadata:
      labels:
        app: taskmanager
    spec:
      # ??? Référencez le ServiceAccount dédié à l'application (défini dans 08-rbac.yaml)
      # Pourquoi ne pas utiliser le ServiceAccount "default" ?
      serviceAccountName: taskmanager-sa
      automountServiceAccountToken: false

      # ??? Définissez un securityContext au niveau du Pod
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001     # — quel UID utiliser ? (hint: regardez votre Dockerfile)
        fsGroup: 10001

      containers:
        - name: taskmanager
          image: ghcr.io/hugo-mah/taskmanager:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000

          livenessProbe:
            httpGet:
              path: /healthz
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3

          # ??? Définissez la sonde readiness
          # L'endpoint /readyz retourne 200 seulement si Redis est accessible
          readinessProbe:
            httpGet:
              path: /readyz
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 3

          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"

          # ??? Définissez le securityContext au niveau du conteneur
          # Toutes les contraintes listées dans les consignes doivent être présentes
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - "ALL"   # valeur attendue : "ALL" pour supprimer toutes les capabilities Linux

          # Si readOnlyRootFilesystem: true provoque des erreurs au démarrage de gunicorn,
          # identifiez les chemins qui nécessitent de l'écriture (ex: /tmp) et ajoutez
          # un volume emptyDir pour chacun. Exemple de structure :
          #
          # volumeMounts:
          #   - name: tmp
          #     mountPath: /tmp
          #
          # volumes:
          #   - name: tmp
          #     emptyDir: {}
          volumeMounts:
            - name: tmp
              mountPath: /tmp

      volumes:
        - name: tmp
          emptyDir: {}
