k8s/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskmanager
  namespace: taskmanager
  annotations:
    # ??? Quelle annotation permet de réécrire l'URL cible avec nginx-ingress ?
    # Consultez la doc : https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: traefik
  rules:
    - host: taskmanager.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: taskmanager
                port:
                  number: 80
